[gd_scene load_steps=10 format=2]

[ext_resource path="res://item_slot_default_background.png" type="Texture" id=1]
[ext_resource path="res://scenes/slot/slot.gd" type="Script" id=2]
[ext_resource path="res://default_inventory_background.png" type="Texture" id=3]
[ext_resource path="res://images/PantsOverlay.png" type="Texture" id=4]
[ext_resource path="res://images/ShoesOverlay.png" type="Texture" id=5]
[ext_resource path="res://images/ShirtOverlay.png" type="Texture" id=6]
[ext_resource path="res://scenes/inventory/inventory.gd" type="Script" id=7]
[ext_resource path="res://images/inventory-nine-patch-background.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 7 )

[node name="BackgroundNinePatchRect" type="NinePatchRect" parent="."]
margin_right = 17.0
margin_bottom = 15.0
mouse_filter = 0
texture = ExtResource( 8 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryGrid" type="GridContainer" parent="BackgroundNinePatchRect"]
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentGrid" type="GridContainer" parent="BackgroundNinePatchRect"]
margin_right = 18.0
margin_bottom = 62.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShirtSlot" type="Panel" parent="BackgroundNinePatchRect/EquipmentGrid"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="BackgroundNinePatchRect/EquipmentGrid/ShirtSlot"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PantsSlot" type="Panel" parent="BackgroundNinePatchRect/EquipmentGrid"]
margin_top = 22.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="BackgroundNinePatchRect/EquipmentGrid/PantsSlot"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShoesSlot" type="Panel" parent="BackgroundNinePatchRect/EquipmentGrid"]
margin_top = 44.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="BackgroundNinePatchRect/EquipmentGrid/ShoesSlot"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 117.558
margin_top = 78.7939
margin_right = 324.558
margin_bottom = 190.794
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="BackgroundNinePatchRect" to="." method="_on_BackgroundNinePatchRect_gui_input"]
